// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IndicatorList > renders correct HTML structure (ol, 5 items) 1`] = `
"<ol class="indicator-list">
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
</ol>"
`;

exports[`IndicatorList > renders correct HTML structure (ul, 3 items) 1`] = `
"<ul class="indicator-list">
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
</ul>"
`;

exports[`IndicatorList > renders correct HTML structure with indicator slots 1`] = `
"<ul class="indicator-list">
  <li class="has-indicator">
    <div class="indicator-list__indicator"><span class="indicator-icon">✓</span></div><span>First item</span>
  </li>
  <li class="">
    <!--v-if--><span>Second item</span>
  </li>
</ul>"
`;

exports[`IndicatorList > renders correct HTML structure with styleClassPassthrough 1`] = `
"<ul class="indicator-list custom-class another-class">
  <li class="">
    <!--v-if-->
  </li>
  <li class="">
    <!--v-if-->
  </li>
</ul>"
`;

exports[`IndicatorList > renders correctly with all props and slots combined 1`] = `
"<ol class="indicator-list combined-class">
  <li class="has-indicator">
    <div class="indicator-list__indicator"><span class="indicator-icon">1</span></div><span>Step one</span>
  </li>
  <li class="">
    <!--v-if--><span>Step two</span>
  </li>
  <li class="">
    <!--v-if--><span>Step three</span>
  </li>
</ol>"
`;
